--- a/src/app/components/shop/shop.component.css
+++ b/src/app/components/shop/shop.component.css
@@ -149,7 +149,7 @@ button:disabled {
 @media (max-width: 600px) {
     .shop-container {
         width: 100%;
-        transform: scale(0.47);
+        transform: scale(0.43);
         margin-left: -5%;
     }
     .shop-item {
@@ -198,7 +198,7 @@ button:disabled {
     @media (max-width: 375px) {
         .shop-container {
             width: 100%;
-            transform: scale(0.44);
+            transform: scale(0.38);
             padding: 8px;
         }
 
